--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ yarn-debug.log*
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
+
+# Ignore workspace files
+**/workspace.json
+**/.structurizr/*
